# FMS_Renderer

./: fms_push.sh  mc_models
.github/workflows/: ci.yml
build_tools/: build_all.sh  global_tools  ndk.toolchain.cmake  termux_build_all.sh
cpp_fms/: CMakeLists.txt  fms_curve.cpp  fms_curve.h
csharp_fms/: FMSCurveCore.cs  FMSCurveEditor.csproj  Program.cs
docs/: README.md
java_fms/: build.gradle  settings.gradle
java_fms/app/: build.gradle
java_fms/app/src/main/: AndroidManifest.xml
java_fms/app/src/main/java/com/f/renderer/: MainActivity.kt
java_fms/app/src/main/java/com/fms/render/: FMSCurveRender.java
java_fms/app/src/main/res/layout/: activity_main.xml
python_fms/: build.py  fms_render.py
